[project]
name = "nb2-workspace"
version = "0"
authors = [{ name = "student_2333", email = "lgc2333@126.com" }]
dependencies = []
requires-python = ">=3.10"
license = { text = "MIT" }

[tool.pdm.dev-dependencies]
dev = [
    # pip
    "setuptools>=68.0.0",
    "pip>=23.2",
    # tools
    "basedpyright>=1.6.1",
    "ruff>=0.0.278",
    "pytest>=8.1.1",
    "pytest-asyncio>=0.23.5.post1",
    # nonebot
    "nonebot2[all]>=2.2.1",
    "nonebot-adapter-onebot>=2.4.0",
    # packages
    "-e file:///${PROJECT_ROOT}/packages/nonebot-plugin-sanyao",
]

[tool.pdm]
distribution = false

[tool.pdm.scripts]

[tool.pdm.scripts.pull]
shell = "git pull && git submodule foreach --recursive git pull && pdm install -G:all"

[tool.basedpyright]
pythonVersion = "3.9"
defineConstant = { PYDANTIC_V2 = true }
typeCheckingMode = "standard"
reportShadowedImports = false
exclude = [
    "**/node_modules",
    "**/.venv",
]

[tool.ruff]
extend-exclude = []

[tool.ruff.format]
docstring-code-format = true
line-ending = "lf"

[tool.ruff.lint]
preview = true
ignore = [
    "B008",
    "B905",
    # "COM812",
    "E501",
    "FBT001",
    "FBT002",
    "ISC001",
    "PERF203",
    "PGH003",
    "PLC04",
    "RUF001",
    "RUF002",
    "RUF003",
    "RUF006",
    "RUF100",
    "S101",
    "S311",
    "S404",
    "SIM117",
    "TRY002",
    "TRY003",
]
select = [
    "A",
    "ANN001",
    "ARG",
    "ASYNC",
    "B",
    "C4",
    "COM",
    "DTZ",
    "E",
    "F",
    "FBT",
    "FLY",
    "FURB",
    "I",
    "ISC",
    "N",
    "NPY",
    "PERF",
    "PIE",
    "PGH",
    # "PL",
    "PT",
    "PTH",
    "PYI",
    "Q",
    "RET",
    "RSE",
    "RUF",
    "S",
    "SIM",
    "SLF",
    "SLOT",
    "TCH",
    "TRY",
    "YTT",
]

[tool.ruff.lint.per-file-ignores]
"private/nonebot-plugin-send-anything-anywhere/*.py" = [
    "I001",
    "A001",
    "A002",
    "A003",
    "N818",
    "ARG001",
    "ARG004",
    "SLF001",
]
"private/adapter-telegram/*.py" = [
    "I001",
    "A001",
    "A002",
    "A003",
    "B010",
    "N818",
    "ARG001",
    "ARG004",
    "COM812",
    "SLF001",
    "COM812",
]

[tool.ruff.lint.isort]
combine-as-imports = true
detect-same-package = true
extra-standard-library = ["typing_extensions"]
split-on-trailing-comma = true
